--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
   </head>
   <body>
     <h1>WORLD CLOCK</h1>
+    <select name="cities" id="">
+      <option value="">Choose city</option>
+      <option value="">London</option>
+      <option value="">paris</option>
+      <option value="">Kampala</option>
+    </select>
+    <div class="options">
+      <div class="option">
+        <h2>London</h2>
+        <div class="dates">12 August 2025</div>
+        <div class="time">00:00:00</div>
+      </div>
+      <div class="option">
+        <h2>Paris</h2>
+        <div class="dates">12 August 2025</div>
+        <div class="time">00:00:00</div>
+      </div>
+      <div class="option">
+        <h2>Kampala</h2>
+        <div class="dates">12 August 2025</div>
+        <div class="time">00:00:00</div>
+      </div>
+    </div>
     <footer>
-      This project was coded by <a href="a" target="_blank">kinya Ruchiu</a> and
-      is open sourced at <a href="a" target="_blank">github</a>
+      This project was coded by
+      <a href="https://github.com/Rizikikinya" target="_blank">kinya Ruchiu</a>
+      and is open sourced at
+      <a href="https://github.com/Rizikikinya/Worldclock" target="_blank"
+        >github</a
+      >
     </footer>
     <script src="index.js"></script>
   </body>
