UPDATED MY JAVA

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
+
+
     <title>world-Clock</title>
   </head>
   <body>
@@ -16,7 +20,7 @@
         <option value="">Kampala</option>
       </select>
 
-      <div class="city-options">
+      <div class="city-options" id="london">
         <div>
           <h2>London</h2>
           <div class="dates">12 August 2025</div>
@@ -24,7 +28,7 @@
           <div class="time">00:00:00 <small>AM</small></div>
           </div>
 
-          <div class="city-options">
+          <div class="city-options" id="lagos">
             <div>
         <h2>Lagos</h2>
           <div class="dates">12 August 2025</div>
@@ -32,7 +36,7 @@
           <div class="time">00:00:00 <small>AM</small></div>
           </div>
 
-          <div class="city-options">
+          <div class="city-options" id="kampala">
             <div>
         <h2>Kamplala</h2>
           <div class="dates">12 August 2025</div>
