added current location

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h1>WORLD CLOCK</h1>
       <select name="cities" id="city">
         <option value="">Choose city</option>
+        <option value="current">My location</option>
         <option value="Europe/London">London</option>
         <option value="Europe/Paris">paris</option>
         <option value="Africa/Kampala">Kampala</option>
